Fix z-index

--- a/src/main/webapp/css/autocomplete.css
+++ b/src/main/webapp/css/autocomplete.css
@@ -21,7 +21,7 @@
     border-left: 1px solid #888;
     border-right: 1px solid #888;
     border-bottom: 1px solid #888;
-    z-index: 1;
+    z-index: 9999;
     padding : 0;
 }
 
